# computing-paradigms

./: .gitignore  README.md
atlas/: MY-RULES.md  (+5 more)
projects/statekanban/05_delivery/: delivery_manifest.md  integration_report.md  pyproject.toml  r5_integration_report.md  r6_integration_report.md
projects/statekanban/05_delivery/statekanban/: __init__.py  config.py  snapshot.py
projects/statekanban/05_delivery/statekanban/adapters/: __init__.py  anthropic_adapter.py  base.py  cli_adapter.py  codex_adapter.py  deepseek_adapter.py  iflytek_adapter.py  mock_adapter.py
projects/statekanban/05_delivery/statekanban/cli/: __init__.py  main.py  validate.py
projects/statekanban/05_delivery/statekanban/core/: errors.py  kanban.py  message_bus.py  process.py  registry.py  valve.py  viewport.py
projects/statekanban/05_delivery/statekanban/engine/: __init__.py  circuit_breaker.py  convergence.py  engine.py  response_parser.py  result.py  router.py  scheduler.py
projects/statekanban/05_delivery/statekanban/roles/: __init__.py  architect.py  coder.py  integrator.py  reviewer.py  tester.py
projects/statekanban/05_delivery/statekanban/testing/: __init__.py  e2e_helpers.py
projects/statekanban/05_delivery/statekanban/tools/: __init__.py  call_codex.py  call_llm.py  read_file.py  run_shell.py  search_code.py  write_file.py
projects/vault-cli/03_source/backend/: pyproject.toml
projects/vault-cli/03_source/backend/src/vault_cli/: __init__.py  errors.py
projects/vault-cli/03_source/backend/src/vault_cli/cli/: __init__.py  exit_codes.py  main.py  password.py
(+1082 files in other folders)
